// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.internal.testing.testboot;

option go_package = "namespacelabs.dev/foundation/internal/testing/testboot";

import "schema/networking.proto";

message TestRequest {
    repeated .foundation.schema.Endpoint         endpoint          = 1;
    repeated .foundation.schema.InternalEndpoint internal_endpoint = 2;
}